@@ -41,6 +41,7 @@ PKG_CHECK_MODULES(XPRINT, x11 xext xau printproto)
 AC_SUBST(XPRINT_CFLAGS)
 AC_SUBST(XPRINT_LIBS)
 
+XORG_MANPAGE_SECTIONS
 XORG_RELEASE_VERSION
 
 AC_OUTPUT([Makefile
