@@ -1,3 +1,9 @@
+2005-10-12  Alan Coopersmith  <alan.coopersmith@sun.com>
+
+	* man/Makefile.am: 
+	* configure.ac:
+	Use sed to fill in variables in man pages
+	
 2005-07-14  Keith Packard  <keithp@keithp.com>
 
 	* src/Makefile.am:
